fix viewport on mobile safari

--- a/index.css
+++ b/index.css
@@ -166,6 +166,7 @@ input {
   display: flex;
   flex-flow: column;
   min-height: calc(100vh - 2rem);
+  min-height: calc(100dvh - 2rem);
 }
 
 nav {
